# pairs_trading

./: .gitignore  README.md  pairs_trading.db  pyproject.toml
src/config/: dotenv.py
src/data/: alpaca_provider.py  history_data_provider.py  sp500_scrapper.py
src/db/: cointegration_repository.py  db.py  historical_price_repository.py  models.py  pair_position_repository.py  pair_stats_repository.py  sector_repository.py  stock_repository.py
src/domain/: candlestick.py  cointegration.py  direction.py  historical_price.py  pair_position.py  pair_stats.py  stock.py  stock_pair.py  strategy_signal.py  zscore_strategy.py  zscore_tracker.py
src/scripts/: backtesting.py  calculate_cointegration.py  live_signals.py  load_assets.py  load_historical_price.py
src/services/: backtesting_service.py  cointegration_service.py  cointegration_strategy.py  position_manager.py
